feat: add sass file and style acordion

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,5 @@
-@import'./utils/variables'
+@import'./utils/variables';
+@import'./base/container';
+@import'./base/common';
+@import'./layout/active';
+@import'./components/hidden';
