--- a/css/main.css
+++ b/css/main.css
@@ -111,8 +111,21 @@ button {
   display: none;
 }
 
+.content-accordion {
+  padding: 0 10px;
+  line-height: 1.2;
+  max-height: 0;
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
+  transition: opacity 1050ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .accordion-list label + input[type=radio]:checked + .content-accordion {
   max-height: 568px;
+  opacity: 1;
+  visibility: visible;
+  overflow: auto;
 }
 
 .accordion-list {
@@ -150,20 +163,6 @@ button {
   }
 }
 
-.accordion__btn {
-  transform: rotate(90deg);
-  font-size: 30px;
-  color: #2f303a;
-}
-
-.content-accordion {
-  padding: 0 10px;
-  line-height: 1.2;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .content-accordion__img-meme {
   margin: 0 auto;
   width: 100%;
@@ -178,4 +177,30 @@ button {
   .content-accordion__img-meme {
     width: 650px;
   }
+}
+
+.accordion__btn {
+  font-size: 30px;
+}
+
+.accordion__btn .close {
+  display: none;
+}
+
+.accordion__btn:hover .open {
+  display: none;
+}
+
+.accordion__btn:hover .close {
+  display: block;
+}
+
+.accordion__btn:hover {
+  cursor: pointer;
+}
+
+.list__display:hover .accordion__btn {
+  display: block;
+  font-size: 30px;
+  color: #2f303a;
 }/*# sourceMappingURL=main.css.map */
