feat: add functional to accordion 11.03 12:08 hover on card

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,6 +3,7 @@
   $color-orange: #fcfcdb;
   $color-action: #2196f3;
   $color-border-light: #ececec;
+    $color-blue-light: #a6d2f5;
   $color-second-white: #fff;
   $color-black-light: #2f303a;
   $fill-svg-grey: #afb1b8;
