--- a/css/main.css
+++ b/css/main.css
@@ -15,11 +15,6 @@
     width: 820px;
   }
 }
-@media screen and (min-width: 1080px) {
-  .container {
-    width: 1080px;
-  }
-}
 html {
   box-sizing: border-box;
 }
@@ -107,18 +102,22 @@ button {
   margin-bottom: 40px;
 }
 
-.accordion-list label + input[type=radio] {
-  display: none;
+.accordion-list {
+  max-width: 568px;
+}
+@media screen and (min-width: 820px) {
+  .accordion-list {
+    max-width: 820px;
+  }
+}
+.accordion-list:hover .accordion__btn {
+  display: block;
+  font-size: 30px;
+  color: #2f303a;
 }
 
-.content-accordion {
-  padding: 0 10px;
-  line-height: 1.2;
-  max-height: 0;
-  opacity: 0;
-  visibility: hidden;
-  overflow: hidden;
-  transition: opacity 1050ms cubic-bezier(0.4, 0, 0.2, 1);
+.accordion-list label + input[type=radio] {
+  display: none;
 }
 
 .accordion-list label + input[type=radio]:checked + .content-accordion {
@@ -128,54 +127,34 @@ button {
   overflow: auto;
 }
 
-.accordion-list {
-  max-width: 568px;
-}
-@media screen and (min-width: 820px) {
-  .accordion-list {
-    max-width: 820px;
-  }
-}
-
 .accordion__item {
   width: 100%;
   margin-bottom: 10px;
-  background-color: #afb1b8;
-  padding: 20px;
-  border-radius: 4px;
 }
 
 .accordion__title {
+  padding: 20px;
   display: inline-block;
   margin: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
   line-height: 1.2;
-  cursor: pointer;
   color: #2f303a;
+  background-color: #afb1b8;
+  border: 4px solid #a6d2f5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.accordion__title:hover, .accordion__title:focus {
+  background-color: #a6d2f5;
 }
 @media screen and (min-width: 568px) {
   .accordion__title {
     font-size: 20px;
-  }
-}
-
-.content-accordion__img-meme {
-  margin: 0 auto;
-  width: 100%;
-  height: auto;
-}
-@media screen and (min-width: 568px) {
-  .content-accordion__img-meme {
-    width: 450px;
-  }
-}
-@media screen and (min-width: 820px) {
-  .content-accordion__img-meme {
-    width: 650px;
+    padding: 10px;
   }
 }
 
@@ -199,8 +178,41 @@ button {
   cursor: pointer;
 }
 
-.list__display:hover .accordion__btn {
-  display: block;
-  font-size: 30px;
-  color: #2f303a;
+.content-accordion {
+  padding: 0 10px;
+  line-height: 1.2;
+  max-height: 0;
+  opacity: 0;
+  transition: opacity 1050ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.content-accordion {
+  margin: 0px;
+  opacity: 0;
+  max-height: 0px;
+  padding: 5px 10px;
+  transition: opacity 250ms ease-in-out 0s;
+}
+
+.accordion__title:hover ~ .content-accordion,
+.content-accordion:hover {
+  opacity: 1;
+  max-height: 700px;
+  transition: opacity 250ms ease-in-out 0s;
+}
+
+.content-accordion__img-meme {
+  margin: 0 auto;
+  width: 100%;
+  max-height: 443px;
+}
+@media screen and (min-width: 568px) {
+  .content-accordion__img-meme {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 820px) {
+  .content-accordion__img-meme {
+    width: 650px;
+  }
 }/*# sourceMappingURL=main.css.map */
