--- a/sass/layout/_active.scss
+++ b/sass/layout/_active.scss
@@ -1,29 +1,7 @@
 .active__title {
   margin-bottom: 40px;
 }
-
-.accordion-list label + input[type="radio"] {
-  display: none;
-}
-.content-accordion {
-  padding: 0 10px;
-  line-height: 1.2;
-  max-height: 0;
-  opacity: 0;
-  visibility: hidden;
-  overflow: hidden;
-  transition: opacity 1050ms $timing-function;
-}
-
-
-
-.accordion-list label+input[type="radio"]:checked + .content-accordion {
-  max-height: 568px;
-  opacity: 1;
-  visibility: visible;
-  overflow: auto;
-}
-
+// ul
 .accordion-list {
   max-width: 568px;
 
@@ -31,36 +9,121 @@
     max-width: 820px;
   }
 
+    &:hover .accordion__btn {
+      display: block;
+      font-size: 30px;
+      color: $color-black-light;
+    }
+
 }
-.accordion__item{
+
+
+.accordion-list label + input[type="radio"] {
+  display: none;
+}
+.accordion-list label+input[type="radio"]:checked+.content-accordion {
+  max-height: 568px;
+  opacity: 1;
+  visibility: visible;
+  overflow: auto;
+}
+
+// li
+.accordion__item {
   width: 100%;
   margin-bottom: 10px;
-  background-color:$fill-svg-grey;
-  padding: 20px;
-  border-radius: 4px;
+
+  // @media screen and (min-width:568px) {
+  //     padding: 10px;
+  //   }
+
 }
+// label - name question;
 .accordion__title {
+  padding: 20px;
   display: inline-block;
   margin: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 16px;
+
+  font-size: 18px;
   font-weight: 500;
   line-height: 1.2;
-  cursor: pointer;
-  color: $color-black-light;
 
-  @media screen and (min-width:568px) {
-    font-size: 20px;
-  }
+  color: $color-black-light;
+  background-color: $fill-svg-grey;
+  border: 4px solid $color-blue-light;
+  transition: background-color 250ms $timing-function;
+
+  &:hover,
+  &:focus {
+  background-color: $color-blue-light;
 }
 
+  cursor: pointer;
+  @media screen and (min-width:568px) {
+    font-size: 20px;
+    padding: 10px;
+  }
+}
+// span + btn + svg;
+.accordion__btn {
+  font-size: 30px;
+}
 
+.accordion__btn .close {
+  display: none;
+}
+
+.accordion__btn:hover .open {
+  display: none;
+}
+
+.accordion__btn:hover .close {
+  display: block;
+}
+
+.accordion__btn:hover {
+  cursor: pointer;
+}
+//  div  img  hide;
+.content-accordion {
+  padding: 0 10px;
+  line-height: 1.2;
+  max-height: 0;
+  opacity: 0;
+  transition: opacity 1050ms $timing-function;
+}
+
+.content-accordion {
+  margin: 0px;
+  opacity: 0;
+  max-height: 0px;
+  padding: 5px 10px;
+
+  transition: opacity 250ms ease-in-out 0s;
+}
+
+.accordion__title:hover~.content-accordion,
+.content-accordion:hover {
+  opacity: 1;
+  max-height: 700px;
+  transition: opacity 250ms ease-in-out 0s;
+}
+
+// .accordion__item:hover>.accordion__title {
+//   background-color: transparent;
+// }
+
+// .accordion__item:last-child>.accordion__title,
+// .accordion__item:last-child>.content-accordion {
+//   background-color: transparent;
+// }
 .content-accordion__img-meme {
   margin: 0 auto;
   width: 100%;
-  height: auto;
+  max-height: 443px;
 
   @media screen and (min-width:568px) {
     width: 450px;
@@ -70,30 +133,14 @@
     width: 650px;
   }
 }
-.accordion__btn{
-  font-size: 30px;
-}
-.accordion__btn .close{
-display: none;
-}
-.accordion__btn:hover .open{
-display: none;
-}
-.accordion__btn:hover .close {
-  display: block;
-}
-.accordion__btn:hover{
-  cursor: pointer;
-}
 
-.list__display:hover .accordion__btn{
-  display: block;
-  font-size: 30px;
-  color: $color-black-light;
 
-}
 
-// .accordion__btn::after + .active:hover{
-//   content: "+";
-//   transform: rotate(90deg);
-// }
+
+
+
+
+
+
+
+
