--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,10 @@ li {
 body {
   font-family: "Roboto";
   background-color: #fcfcdb;
+  color: #2f303a;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.2;
 }
 body.is-open {
   overflow: hidden;
@@ -116,45 +120,64 @@ button {
   color: #2f303a;
 }
 
-.accordion-list label + input[type=radio] {
-  display: none;
+.input {
+  width: 0;
+  height: 0;
+  -webkit-appearance: none;
+  appearance: none;
+  position: absolute;
 }
 
-.accordion-list label + input[type=radio]:checked + .content-accordion {
-  max-height: 568px;
+.content-accordion {
+  max-height: 0px;
+  opacity: 0;
+  padding: 10px 15px;
+  transition: opacity 250ms ease-in-out 0s;
+}
+
+.accordion__title:hover ~ .content-accordion,
+.content-accordion:hover {
+  display: block;
+  opacity: 1;
+  max-height: 700px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input:checked ~ .content-accordion {
+  display: block;
   opacity: 1;
   visibility: visible;
   overflow: auto;
+  display: block;
+  max-height: 568px;
+}
+
+.input:checked ~ .accordion__title {
+  background-color: #a6d2f5;
 }
 
 .accordion__item {
-  width: 100%;
   margin-bottom: 10px;
+  border: 2px solid #afb1b8;
+  cursor: auto;
+}
+.accordion__item:hover {
+  cursor: pointer;
 }
 
 .accordion__title {
-  padding: 20px;
-  display: inline-block;
-  margin: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.2;
-  color: #2f303a;
-  background-color: #afb1b8;
-  border: 4px solid #a6d2f5;
+  display: block;
+  padding: 10px 5px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
 }
 .accordion__title:hover, .accordion__title:focus {
   background-color: #a6d2f5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 568px) {
   .accordion__title {
     font-size: 20px;
-    padding: 10px;
+    padding: 10px 15px;
   }
 }
 
@@ -176,29 +199,6 @@ button {
 
 .accordion__btn:hover {
   cursor: pointer;
-}
-
-.content-accordion {
-  padding: 0 10px;
-  line-height: 1.2;
-  max-height: 0;
-  opacity: 0;
-  transition: opacity 1050ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.content-accordion {
-  margin: 0px;
-  opacity: 0;
-  max-height: 0px;
-  padding: 5px 10px;
-  transition: opacity 250ms ease-in-out 0s;
-}
-
-.accordion__title:hover ~ .content-accordion,
-.content-accordion:hover {
-  opacity: 1;
-  max-height: 700px;
-  transition: opacity 250ms ease-in-out 0s;
 }
 
 .content-accordion__img-meme {
