--- a/sass/layout/_active.scss
+++ b/sass/layout/_active.scss
@@ -1,6 +1,7 @@
 .active__title {
   margin-bottom: 40px;
 }
+
 // ul
 .accordion-list {
   max-width: 568px;
@@ -9,64 +10,124 @@
     max-width: 820px;
   }
 
-    &:hover .accordion__btn {
-      display: block;
-      font-size: 30px;
-      color: $color-black-light;
-    }
+  &:hover .accordion__btn {
+    display: block;
+    font-size: 30px;
+    color: $color-black-light;
+  }
 
 }
 
+.input {
+  width: 0;
+  height: 0;
+  -webkit-appearance: none;
+  appearance: none;
 
-.accordion-list label + input[type="radio"] {
-  display: none;
+  position: absolute;
 }
-.accordion-list label+input[type="radio"]:checked+.content-accordion {
-  max-height: 568px;
+
+//  div  img  hide;
+.content-accordion {
+  max-height: 0px;
+  opacity: 0;
+  padding: 10px 15px;
+  transition: opacity 250ms ease-in-out 0s;
+
+
+}
+
+// .content-accordion {
+//   padding: 0 10px;
+//   line-height: 1.2;
+//   max-height: 0;
+//   opacity: 0;
+//   transition: opacity 1050ms $timing-function;
+// }
+// .content-accordion {
+//   margin: 0px;
+//   opacity: 0;
+//   max-height: 0px;
+//   padding: 5px 10px;
+
+//   transition: opacity 250ms ease-in-out 0s;
+// }
+.accordion__title:hover~.content-accordion,
+.content-accordion:hover {
+  display: block;
+  opacity: 1;
+  max-height: 700px;
+  transition: opacity 250ms $timing-function;
+}
+
+input:checked~.content-accordion {
+  display: block;
   opacity: 1;
   visibility: visible;
   overflow: auto;
+  display: block;
+  max-height: 568px;
 }
 
-// li
-.accordion__item {
-  width: 100%;
-  margin-bottom: 10px;
-
-  // @media screen and (min-width:568px) {
-  //     padding: 10px;
-  //   }
-
-}
-// label - name question;
-.accordion__title {
-  padding: 20px;
-  display: inline-block;
-  margin: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.2;
-
-  color: $color-black-light;
-  background-color: $fill-svg-grey;
-  border: 4px solid $color-blue-light;
-  transition: background-color 250ms $timing-function;
-
-  &:hover,
-  &:focus {
+.input:checked~.accordion__title {
   background-color: $color-blue-light;
 }
 
-  cursor: pointer;
+// .accordion-list .accordion__title+.input:checked+.content-accordion {
+//   // max-height: 568px;
+//   opacity: 1;
+//   visibility: visible;
+//   overflow: auto;
+//   display: block;
+// }
+
+// li
+.accordion__item {
+  // width: 100%;
+  margin-bottom: 10px;
+  border: 2px solid $fill-svg-grey;
+  cursor: auto;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+
+
+}
+
+// label - name question;
+.accordion__title {
+  display: block;
+  padding: 10px 5px;
+  transition: background-color 250ms $timing-function;
+
+
+  &:hover,
+  &:focus {
+    background-color: $color-blue-light;
+    transition: background-color 250ms $timing-function;
+  }
+
   @media screen and (min-width:568px) {
     font-size: 20px;
-    padding: 10px;
+    padding: 10px 15px;
   }
 }
+
+// display: flex;
+// align-items: center;
+// justify-content: space-between;
+
+
+
+
+
+
+
+
+
+
 // span + btn + svg;
 .accordion__btn {
   font-size: 30px;
@@ -87,30 +148,10 @@
 .accordion__btn:hover {
   cursor: pointer;
 }
-//  div  img  hide;
-.content-accordion {
-  padding: 0 10px;
-  line-height: 1.2;
-  max-height: 0;
-  opacity: 0;
-  transition: opacity 1050ms $timing-function;
-}
 
-.content-accordion {
-  margin: 0px;
-  opacity: 0;
-  max-height: 0px;
-  padding: 5px 10px;
 
-  transition: opacity 250ms ease-in-out 0s;
-}
 
-.accordion__title:hover~.content-accordion,
-.content-accordion:hover {
-  opacity: 1;
-  max-height: 700px;
-  transition: opacity 250ms ease-in-out 0s;
-}
+
 
 // .accordion__item:hover>.accordion__title {
 //   background-color: transparent;
@@ -133,14 +174,3 @@
     width: 650px;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
