--- a/css/main.css
+++ b/css/main.css
@@ -107,11 +107,11 @@ button {
 }
 
 .accordion-list {
-  max-width: 568px;
+  width: 568px;
 }
 @media screen and (min-width: 820px) {
   .accordion-list {
-    max-width: 820px;
+    width: 820px;
   }
 }
 .accordion-list:hover .accordion__btn {
@@ -148,7 +148,6 @@ input:checked ~ .content-accordion {
   opacity: 1;
   visibility: visible;
   overflow: auto;
-  display: block;
   max-height: 568px;
 }
 
