--- a/sass/layout/_active.scss
+++ b/sass/layout/_active.scss
@@ -4,10 +4,10 @@
 
 // ul
 .accordion-list {
-  max-width: 568px;
+  width: 568px;
 
   @media screen and (min-width:820px) {
-    max-width: 820px;
+  width: 820px;
   }
 
   &:hover .accordion__btn {
@@ -33,8 +33,26 @@
   opacity: 0;
   padding: 10px 15px;
   transition: opacity 250ms ease-in-out 0s;
+}
 
+.accordion__title:hover~.content-accordion,
+.content-accordion:hover {
+  display: block;
+  opacity: 1;
+  max-height: 700px;
+  transition: opacity 250ms $timing-function;
+}
 
+input:checked~.content-accordion {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  overflow: auto;
+  max-height: 568px;
+}
+
+.input:checked~.accordion__title {
+  background-color: $color-blue-light;
 }
 
 // .content-accordion {
@@ -52,29 +70,12 @@
 
 //   transition: opacity 250ms ease-in-out 0s;
 // }
-.accordion__title:hover~.content-accordion,
-.content-accordion:hover {
-  display: block;
-  opacity: 1;
-  max-height: 700px;
-  transition: opacity 250ms $timing-function;
-}
 
-input:checked~.content-accordion {
-  display: block;
-  opacity: 1;
-  visibility: visible;
-  overflow: auto;
-  display: block;
-  max-height: 568px;
-}
 
-.input:checked~.accordion__title {
-  background-color: $color-blue-light;
-}
+
 
 // .accordion-list .accordion__title+.input:checked+.content-accordion {
-//   // max-height: 568px;
+  // max-height: 568px;
 //   opacity: 1;
 //   visibility: visible;
 //   overflow: auto;
@@ -91,9 +92,6 @@ input:checked~.content-accordion {
   &:hover {
     cursor: pointer;
   }
-
-
-
 }
 
 // label - name question;
@@ -118,13 +116,6 @@ input:checked~.content-accordion {
 // display: flex;
 // align-items: center;
 // justify-content: space-between;
-
-
-
-
-
-
-
 
 
 
