--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,10 +3,11 @@
   $color-orange: #fcfcdb;
   $color-action: #2196f3;
   $color-border-light: #ececec;
-    $color-blue-light: #a6d2f5;
+ $color-blue-light: #a6d2f5;
+  $color-background-cont-light: #fbfbfb;
   $color-second-white: #fff;
   $color-black-light: #2f303a;
-  $fill-svg-grey: #afb1b8;
+  $fill-grey: #afb1b8;
   $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 
