--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,7 +3,7 @@
   $color-orange: #fcfcdb;
   $color-action: #2196f3;
   $color-border-light: #ececec;
- $color-blue-light: #a6d2f5;
+ $color-blue-light: #3fe122;
   $color-background-cont-light: #fbfbfb;
   $color-second-white: #fff;
   $color-black-light: #2f303a;
