--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .container {
   padding-left: 15px;
   padding-right: 15px;
@@ -162,7 +163,7 @@ input:checked ~ .content-accordion {
 }
 
 .input:checked ~ .accordion__title {
-  background-color: #a6d2f5;
+  background-color: #3fe122;
 }
 
 .accordion__item {
@@ -176,12 +177,14 @@ input:checked ~ .content-accordion {
 }
 
 .accordion__title {
+  position: relative;
   display: block;
   padding: 10px 5px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .accordion__title:hover, .accordion__title:focus {
-  background-color: #a6d2f5;
+  background-color: #3fe122;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 568px) {
@@ -191,24 +194,22 @@ input:checked ~ .content-accordion {
   }
 }
 
-.accordion__btn {
+.accordion__title::after {
+  content: "+";
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
   font-size: 30px;
+  color: red;
 }
 
-.accordion__btn .close {
-  display: none;
+.accordion__title:hover::after {
+  content: "×";
 }
 
-.accordion__btn:hover .open {
-  display: none;
-}
-
-.accordion__btn:hover .close {
-  display: block;
-}
-
-.accordion__btn:hover {
-  cursor: pointer;
+.input:checked ~ .accordion__title::after {
+  content: "×";
 }
 
 .content-accordion__img-meme {
