--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ button {
   max-height: 0px;
   opacity: 0;
   padding: 10px 15px;
-  transition: opacity 250ms ease-in-out 0s;
+  transition: opacity 550ms cubic-bezier(0.4, 0, 0.2, 1), max-height 550ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .accordion__title:hover ~ .content-accordion,
@@ -151,7 +151,7 @@ button {
   display: block;
   opacity: 1;
   max-height: 700px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), max-height 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 input:checked ~ .content-accordion {
@@ -166,6 +166,22 @@ input:checked ~ .content-accordion {
   background-color: #3fe122;
 }
 
+.content-accordion__img-meme {
+  margin: 0 auto;
+  width: 235px;
+  max-height: 443px;
+}
+@media screen and (min-width: 568px) {
+  .content-accordion__img-meme {
+    width: 440px;
+  }
+}
+@media screen and (min-width: 820px) {
+  .content-accordion__img-meme {
+    width: 600px;
+  }
+}
+
 .accordion__item {
   margin-bottom: 10px;
   border: 2px solid #afb1b8;
@@ -177,6 +193,7 @@ input:checked ~ .content-accordion {
 }
 
 .accordion__title {
+  font-size: 14px;
   position: relative;
   display: block;
   padding: 10px 5px;
@@ -190,6 +207,18 @@ input:checked ~ .content-accordion {
 @media screen and (min-width: 568px) {
   .accordion__title {
     font-size: 20px;
+    padding: 10px 15px;
+  }
+}
+@media screen and (min-width: 820px) {
+  .accordion__title {
+    font-size: 22px;
+    padding: 10px 15px;
+  }
+}
+@media screen and (min-width: 1080px) {
+  .accordion__title {
+    font-size: 22px;
     padding: 10px 15px;
   }
 }
@@ -210,20 +239,4 @@ input:checked ~ .content-accordion {
 
 .input:checked ~ .accordion__title::after {
   content: "×";
-}
-
-.content-accordion__img-meme {
-  margin: 0 auto;
-  width: 235px;
-  max-height: 443px;
-}
-@media screen and (min-width: 568px) {
-  .content-accordion__img-meme {
-    width: 440px;
-  }
-}
-@media screen and (min-width: 820px) {
-  .content-accordion__img-meme {
-    width: 600px;
-  }
 }/*# sourceMappingURL=main.css.map */
