--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ button {
   max-height: 0px;
   opacity: 0;
   padding: 10px 15px;
-  transition: opacity 550ms cubic-bezier(0.4, 0, 0.2, 1), max-height 550ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: opacity 550ms cubic-bezier(0.4, 0, 0.2, 1), max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .accordion__title:hover ~ .content-accordion,
@@ -151,7 +151,7 @@ button {
   display: block;
   opacity: 1;
   max-height: 700px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), max-height 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 input:checked ~ .content-accordion {
@@ -160,6 +160,7 @@ input:checked ~ .content-accordion {
   visibility: visible;
   overflow: auto;
   max-height: 568px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input:checked ~ .accordion__title {
@@ -170,6 +171,7 @@ input:checked ~ .content-accordion {
   margin: 0 auto;
   width: 235px;
   max-height: 443px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 568px) {
   .content-accordion__img-meme {
@@ -197,12 +199,13 @@ input:checked ~ .content-accordion {
   position: relative;
   display: block;
   padding: 10px 5px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
-.accordion__title:hover, .accordion__title:focus {
+.accordion__title:visited .accordion__title:focus, .accordion__title:hover, .accordion__title:active {
   background-color: #3fe122;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #fff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 568px) {
   .accordion__title {
@@ -223,20 +226,39 @@ input:checked ~ .content-accordion {
   }
 }
 
+.accordion-list:hover .accordion__title::after {
+  visibility: visible;
+  transition: visibility 1000ms linear;
+}
+
+.accordion-list .input:checked ~ .accordion__title::after {
+  visibility: visible;
+}
+
+.accordion__title::after {
+  visibility: hidden;
+}
+
 .accordion__title::after {
   content: "+";
   position: absolute;
   top: 50%;
   right: 15px;
   transform: translateY(-50%);
+  font-weight: 700;
   font-size: 30px;
-  color: red;
+  color: #2f303a;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .accordion__title:hover::after {
   content: "×";
+  color: #fff;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input:checked ~ .accordion__title::after {
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #fff;
   content: "×";
 }/*# sourceMappingURL=main.css.map */
