--- a/sass/layout/_active.scss
+++ b/sass/layout/_active.scss
@@ -36,7 +36,7 @@
   max-height: 0px;
   opacity: 0;
   padding: 10px 15px;
-  transition: opacity 550ms $timing-function, max-height 550ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: opacity 550ms $timing-function, max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .accordion__title:hover~.content-accordion,
@@ -44,7 +44,7 @@
   display: block;
   opacity: 1;
   max-height: 700px;
-  transition: opacity 250ms $timing-function, max-height 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: opacity 250ms $timing-function, max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 input:checked~.content-accordion {
@@ -53,6 +53,7 @@ input:checked~.content-accordion {
   visibility: visible;
   overflow: auto;
   max-height: 568px;
+  transition: opacity 250ms $timing-function;
 }
 
 .input:checked~.accordion__title {
@@ -64,6 +65,8 @@ input:checked~.content-accordion {
   margin: 0 auto;
   width: 235px;
   max-height: 443px;
+
+  transition: opacity 250ms $timing-function;
 
   @media screen and (min-width:568px) {
     width: 440px;
@@ -93,13 +96,18 @@ input:checked~.content-accordion {
   position: relative;
   display: block;
   padding: 10px 5px;
-  transition: background-color 250ms $timing-function;
+  transition: background-color 250ms $timing-function, color 250ms $timing-function;
   cursor: pointer;
 
+
+
+  &:visited
+  &:focus,
   &:hover,
-  &:focus {
+  &:active {
     background-color: $color-blue-light;
-    transition: background-color 250ms $timing-function;
+    color: $color-second-white;
+    transition: background-color 250ms $timing-function, color 250ms $timing-function;
   }
 
   @media screen and (min-width:568px) {
@@ -118,11 +126,20 @@ input:checked~.content-accordion {
   }
 }
 
-// .accordion__item>.accordion__title::after {
-//   content: " ";
-//   opacity: 0;
-//   font-size: 0;
-// }
+.accordion-list {
+  &:hover .accordion__title::after {
+    visibility: visible;
+    transition: visibility 1000ms linear;
+  }
+}
+
+.accordion-list .input:checked~.accordion__title::after {
+  visibility: visible;
+}
+
+.accordion__title::after {
+  visibility: hidden;
+}
 
 .accordion__title::after {
   content: "+";
@@ -130,23 +147,24 @@ input:checked~.content-accordion {
   top: 50%;
   right: 15px;
   transform: translateY(-50%);
-
+  font-weight: 700;
   font-size: 30px;
-  color: red;
+  color: $color-black-light;
+  transition: opacity 250ms $timing-function;
 }
 
 .accordion__title:hover::after {
   content: "×";
-
-  // opacity: 1;
-  // font-size: 16px;
+  color: $color-second-white;
+  transition: opacity 250ms $timing-function;
 }
 
 .input:checked~.accordion__title::after {
+
+  transition: opacity 250ms $timing-function;
+  color: $color-second-white;
   content: "×";
 
-  // opacity: 1;
-  // font-size: 16px;
 }
 
 
