--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .container {
   padding-left: 15px;
   padding-right: 15px;
@@ -47,6 +46,8 @@ li {
 }
 
 body {
+  width: 100%;
+  height: 100vh;
   font-family: "Roboto";
   background-color: #fcfcdb;
   color: #2f303a;
@@ -186,7 +187,7 @@ input:checked ~ .content-accordion {
 
 .accordion__item {
   margin-bottom: 10px;
-  border: 2px solid #afb1b8;
+  border: 2px solid #6d6e72;
   cursor: auto;
   transition: cursor 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -201,8 +202,9 @@ input:checked ~ .content-accordion {
   padding: 10px 5px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+  animation-timing-function: linear;
 }
-.accordion__title:visited .accordion__title:focus, .accordion__title:hover, .accordion__title:active {
+.accordion__title:visited, .accordion__title:focus, .accordion__title:hover, .accordion__title:active {
   background-color: #3fe122;
   color: #fff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -226,39 +228,22 @@ input:checked ~ .content-accordion {
   }
 }
 
-.accordion-list:hover .accordion__title::after {
-  visibility: visible;
-  transition: visibility 1000ms linear;
+.card__svg {
+  width: 18px;
+  height: 100%;
 }
 
-.accordion-list .input:checked ~ .accordion__title::after {
-  visibility: visible;
-}
-
-.accordion__title::after {
-  visibility: hidden;
-}
-
-.accordion__title::after {
-  content: "+";
+.open {
   position: absolute;
   top: 50%;
   right: 15px;
   transform: translateY(-50%);
-  font-weight: 700;
-  font-size: 30px;
-  color: #2f303a;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.accordion__title:hover::after {
-  content: "×";
-  color: #fff;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.input:checked ~ .accordion__title::after {
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #fff;
-  content: "×";
+.input:checked ~ .accordion__title .card__svg,
+.accordion__item:hover .card__svg {
+  transform: rotate(45deg);
+  fill: #6d6e72;
+  font-weight: bolder;
 }/*# sourceMappingURL=main.css.map */
