--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -24,6 +24,8 @@ li {
 }
 
 body {
+  width: 100%;
+  height: 100vh;
   font-family: $font-primary;
   background-color: $color-orange;
   color: $color-black-light;
