--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,7 +7,7 @@
   $color-background-cont-light: #fbfbfb;
   $color-second-white: #fff;
   $color-black-light: #2f303a;
-  $fill-grey: #afb1b8;
+  $fill-grey: #6d6e72;
   $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 
