--- a/css/main.css
+++ b/css/main.css
@@ -141,9 +141,9 @@ button {
 }
 
 .content-accordion {
+  padding: 10px 15px;
   max-height: 0px;
   opacity: 0;
-  padding: 10px 15px;
   transition: opacity 550ms cubic-bezier(0.4, 0, 0.2, 1), max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -161,7 +161,7 @@ input:checked ~ .content-accordion {
   visibility: visible;
   overflow: auto;
   max-height: 568px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), max-height 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input:checked ~ .accordion__title {
@@ -172,7 +172,6 @@ input:checked ~ .content-accordion {
   margin: 0 auto;
   width: 235px;
   max-height: 443px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 568px) {
   .content-accordion__img-meme {
@@ -202,7 +201,6 @@ input:checked ~ .content-accordion {
   padding: 10px 5px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
-  animation-timing-function: linear;
 }
 .accordion__title:visited, .accordion__title:focus, .accordion__title:hover, .accordion__title:active {
   background-color: #3fe122;
@@ -226,11 +224,6 @@ input:checked ~ .content-accordion {
     font-size: 22px;
     padding: 10px 15px;
   }
-}
-
-.card__svg {
-  width: 18px;
-  height: 100%;
 }
 
 .open {
