--- a/sass/layout/_active.scss
+++ b/sass/layout/_active.scss
@@ -33,10 +33,11 @@
 
 //  div  img  hide;
 .content-accordion {
+  padding: 10px 15px;
   max-height: 0px;
   opacity: 0;
-  padding: 10px 15px;
-  transition: opacity 550ms $timing-function, max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: opacity 550ms $timing-function,
+    max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .accordion__title:hover~.content-accordion,
@@ -44,7 +45,8 @@
   display: block;
   opacity: 1;
   max-height: 700px;
-  transition: opacity 250ms $timing-function, max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: opacity 250ms $timing-function,
+    max-height 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 input:checked~.content-accordion {
@@ -53,7 +55,7 @@ input:checked~.content-accordion {
   visibility: visible;
   overflow: auto;
   max-height: 568px;
-  transition: opacity 250ms $timing-function;
+  transition: opacity 250ms $timing-function, max-height 250ms $timing-function, visibility 250ms $timing-function;
 }
 
 .input:checked~.accordion__title {
@@ -65,8 +67,7 @@ input:checked~.content-accordion {
   margin: 0 auto;
   width: 235px;
   max-height: 443px;
-
-  transition: opacity 250ms $timing-function;
+  // transition: opacity 250ms $timing-function;
 
   @media screen and (min-width:568px) {
     width: 440px;
@@ -98,7 +99,6 @@ input:checked~.content-accordion {
   padding: 10px 5px;
   transition: background-color 250ms $timing-function, color 250ms $timing-function;
   cursor: pointer;
-  animation-timing-function: linear;
 
 
   &:visited,
@@ -126,11 +126,6 @@ input:checked~.content-accordion {
   }
 }
 
-.card__svg {
-  width: 18px;
-  height: 100%;
-}
-
 .open {
   position: absolute;
   top: 50%;
@@ -147,177 +142,3 @@ input:checked~.content-accordion {
 }
 
 
-// .accordion-list {
-//   &:hover .accordion__title::after {
-//     visibility: visible;
-//     transition: visibility 1000ms linear;
-//   }
-// }
-
-// .accordion-list .input:checked~.accordion__title::after {
-//   visibility: visible;
-// }
-
-// .accordion__title::after {
-//   visibility: hidden;
-// }
-
-// .accordion__title::after {
-//   content: "+";
-//   position: absolute;
-//   top: 50%;
-//   right: 15px;
-//   transform: translateY(-50%);
-//   font-weight: 700;
-//   font-size: 30px;
-//   color: $color-black-light;
-//   transition: opacity 250ms $timing-function;
-// }
-
-// .accordion__title:hover::after {
-//   content: "×";
-//   color: $color-second-white;
-//   transition: opacity 250ms $timing-function;
-// }
-
-// .input:checked~.accordion__title::after {
-
-//   transition: opacity 250ms $timing-function;
-//   color: $color-second-white;
-//   content: "×";
-
-// }
-
-
-
-
-
-
-
-
-
-// + + 
-// .accordion__title::after {
-//   content: "+";
-
-//     position: absolute;
-//     top: 50%;
-//     right: 15px;
-//     transform: translateY(-50%);
-
-//     font-size: 30px;
-//     color: red;
-// }
-
-// .input:checked~.accordion__title::after {
-//   content: "×";
-// }
-
-
-
-
-
-
-
-// title and btn
-// display: flex;
-// align-items: center;
-// justify-content: space-between;
-
-
-// .accordion__item:hover>.accordion__title {
-//   background-color: transparent;
-// }
-
-// .accordion__item:last-child>.accordion__title,
-// .accordion__item:last-child>.content-accordion {
-//   background-color: transparent;
-// }
-
-// hide display content
-
-// .content-accordion {
-//   padding: 0 10px;
-//   line-height: 1.2;
-//   max-height: 0;
-//   opacity: 0;
-//   transition: opacity 1050ms $timing-function;
-// }
-// .content-accordion {
-//   margin: 0px;
-//   opacity: 0;
-//   max-height: 0px;
-//   padding: 5px 10px;
-
-//   transition: opacity 250ms ease-in-out 0s;
-// }
-
-// .accordion-list .accordion__title+.input:checked+.content-accordion {
-// max-height: 568px;
-//   opacity: 1;
-//   visibility: visible;
-//   overflow: auto;
-//   display: block;
-// }
-// .accordion__title::after {
-//   content: " ";
-//   display: block;
-//   width: 16px;
-//   height: 16px;
-
-//   position: absolute;
-//   top: 50%;
-//   right: 15px;
-//   transform: translateY(-50%);
-//   background-color:red;
-//   color: black;
-
-// }
-
-// span + btn + svg;
-// .close,
-// .open {
-//   width: 30px;
-//   height: 30px;
-//   fill: red;
-// }
-
-.accordion__btn {}
-
-
-// .accordion__title::after {
-//   content: "+";
-
-//     position: absolute;
-//     top: 50%;
-//     right: 15px;
-//     transform: translateY(-50%);
-
-//     font-size: 30px;
-//     color: red;
-// }
-
-// .input:checked~.accordion__title::after {
-//   content: "×";
-// }
-// .accordion__btn .close {
-//   display: none;
-
-// }
-
-// .accordion__btn .open {
-//   display: none;
-
-// }
-
-// .accordion__btn:hover.open {
-//   display: none;
-// }
-
-// .accordion__btn:hover.close {
-//   display: block;
-// }
-
-// .accordion__btn:hover {
-//   cursor: pointer;
-// }
